--- a/style.css
+++ b/style.css
@@ -62,3 +62,7 @@ body {
 .container__form__buttons__submit:hover {
     background-color: hsla(246, 40%, 30%, 1);
 }
+
+.hidden {
+    display: none;
+}
