--- a/style.css
+++ b/style.css
@@ -63,6 +63,57 @@ body {
     background-color: hsla(246, 40%, 30%, 1);
 }
 
+.container__form__buttons__submit:disabled {
+    cursor: not-allowed;
+    background-color: hsl(246, 50%, 70%);
+}
+/* Modal */
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: hsla(0, 0%, 0%, 0.3);
+    display: flex;
+    align-items: flex-start;
+    z-index: 1;
+    overflow: auto;
+}
+
+.modal__content {
+    width: 450px;
+    position: relative;
+    margin: 15% auto;
+    padding: 20px;
+    animation-name: animate-top;
+    animation-duration: 400ms;
+    background-color: hsl(200, 10%, 90%);
+}
+
+.modal__content__title {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.modal__content__desc {
+
+}
+
+@keyframes animate-top {
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0px;
+        opacity: 1;
+    }
+}
+
 .hidden {
     display: none;
 }
